2007-07-11  Dan Williams  <dcbw@redhat.com>

	* include/NetworkManager.h
		- Add MESH_OLPC capability for access points

	* src/nm-device-802-11-wireless.c
		- (process_scan_results): detect MESH_OLPC capability on scanned BSSs
			and set the MESH_OLPC bit in the AP's capabilities

2007-07-11  Dan Williams  <dcbw@redhat.com>

	* src/dhcp-manager/nm-dhcp-manager.c
		- (nm_dhcp_dbus_set_state): only cancel the DHCP timeout when the DHCP
			client gets a valid lease

2007-07-05  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
	    - (real_act_stage1_prepare): if the activation is user-requested, start
	        all over at mesh stage 1 (school MPP)

2007-07-03  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
		- (channel_failure_handler): if everything fails, turn off mesh device
			link and reset state to MESH_S1_SCHOOL_MPP
		- (mpp_cleanup): remove dhclient.conf when deactivating mpp
		- (nm_get_anycast_addrs): pull anycast addresses from a file
		- (setup_for_mpp, real_act_stage3_ip_config_start): use configurable
			anycast addresses
		- (real_deactivate_quickly): kill dhclient when switching channels too

2007-07-02  Dan Williams  <dcbw@redhat.com>

	Suppress activation of wireless devices until 5 seconds after NM starts,
	to allow time for wired devices to determine their link state before starting
	mesh association.

2007-07-02  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
		- (channel_failure_handler): handle failure of p2p mesh case too

2007-07-02  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
		- Clean up output of unhandled mesh stage error messages

2007-06-28  Dan Williams  <dcbw@redhat.com>

	Get rid of dhcdbd, based on a patch from Robert Frank.  Drive dhclient
	directly.  Big refactor to make the DHCP manager a GObject subclass with
	signals on DHCP events.

2007-06-22  Dan Williams  <dcbw@redhat.com>

	* callouts/nm-avahi-autoipd.action